--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,9 @@
 version: "3.9"
 
+
 services:
   whoknows-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: devops-valgfag-app
+    image: ghcr.io/gitdengas123456/devops-valgfag:latest
     container_name: whoknows-app
     ports:
       - "8080:8080"
@@ -20,12 +18,13 @@ services:
       SEARCH_FTS: 0
       # Explicitly tell the app which host to use for Postgres (matches the service name below)
       DB_HOST: postgres_db
-      SESSION_KEY: ${SESSION_KEY}
+      SESSION_KEY: ${SESSION_KEY:?SESSION_KEY is required (>=32 bytes)}
       DMI_API_KEY: ${DMI_API_KEY}
     depends_on:
       postgres_db:
         condition: service_healthy
     restart: unless-stopped
+
 
   postgres_db:
     image: postgres:16
@@ -34,18 +33,19 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER:-devops}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?set POSTGRES_PASSWORD in .env}
+      POSTGRES_DB: ${POSTGRES_DB:-whoknows}
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
     ports:
-      - "5432:5432"   # Can be removed in production, but useful for development
+      - "127.0.0.1:5432:5432"   # Can be removed in production, but useful for development
     volumes:
       - postgres-data:/var/lib/postgresql/data
+
 
   node_exporter:
     image: prom/node-exporter:latest
@@ -64,6 +64,7 @@ services:
     pid: host
     restart: unless-stopped
 
+
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
@@ -76,6 +77,7 @@ services:
       - whoknows-app
       - node_exporter
     restart: unless-stopped
+
 
   grafana:
     image: grafana/grafana:latest
@@ -95,7 +97,11 @@ services:
       - prometheus
     restart: unless-stopped
 
+
 volumes:
   prometheus-data:
   grafana-storage:
   postgres-data:
+
+
+
