--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,35 +1,32 @@
 name: CI
 
-
 on:
   push:
     branches: [ main, develop ]
   pull_request:
     branches: [ main, develop ]
 
-
 concurrency:
   group: ci-${{ github.ref }}
   cancel-in-progress: true
-
 
 jobs:
   # -------------------------
   # Build + lint + tests
   # -------------------------
   build:
+    runs-on: ubuntu-latest
     env:
       POSTGRES_USER: ${{ vars.CI_POSTGRES_USER || 'devops' }}
-      POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
+      POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD }}
       POSTGRES_DB: ${{ vars.CI_POSTGRES_DB || 'whoknows' }}
-    runs-on: ubuntu-latest
     services:
       postgres:
         image: postgres:16
         env:
           # Important: env.* does NOT work here, so we repeat the expressions
           POSTGRES_USER: ${{ vars.CI_POSTGRES_USER || 'devops' }}
-          POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
+          POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD }}
           POSTGRES_DB: ${{ vars.CI_POSTGRES_DB || 'whoknows' }}
         ports:
           - 5432:5432
@@ -39,16 +36,13 @@ jobs:
           --health-timeout=5s
           --health-retries=5
 
-
     strategy:
       matrix:
         go-version: [ "1.25.x" ]
 
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -57,18 +51,14 @@ jobs:
           check-latest: true
           cache: true
 
-
       - name: Print go version
         run: go version
-
 
       - name: Download dependencies
         run: go mod download
 
-
       - name: Run go vet
         run: go vet ./...
-
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
@@ -76,21 +66,17 @@ jobs:
           version: v1.60.3
           args: ./...
 
-
       - name: Run tests (race + coverage)
         env:
-          # Here we can use env.*, as they come from the job-level env
           DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}?sslmode=disable
         run: |
           go test -v -race ./... \
             -coverpkg=./cmd/server,./handlers,./internal/db \
             -coverprofile=coverage.out
 
-
       - name: Show coverage summary
         if: ${{ always() && hashFiles('coverage.out') != '' }}
         run: go tool cover -func=coverage.out | sed -n '1,200p'
-
 
       - name: Upload coverage (artifact)
         if: ${{ hashFiles('coverage.out') != '' }}
@@ -98,7 +84,6 @@ jobs:
         with:
           name: coverage-${{ matrix.go-version }}
           path: coverage.out
-
 
   # -------------------------
   # Dockerfile lint
@@ -110,12 +95,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-
       - name: Lint Dockerfile
         uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: Dockerfile
-
 
   # -------------------------
   # Health / smoke test
@@ -125,14 +108,14 @@ jobs:
     needs: build
     env:
       POSTGRES_USER: ${{ vars.CI_POSTGRES_USER || 'devops' }}
-      POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
+      POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD }}
       POSTGRES_DB: ${{ vars.CI_POSTGRES_DB || 'whoknows' }}
     services:
       postgres:
         image: postgres:16
         env:
           POSTGRES_USER: ${{ vars.CI_POSTGRES_USER || 'devops' }}
-          POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
+          POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD }}
           POSTGRES_DB: ${{ vars.CI_POSTGRES_DB || 'whoknows' }}
         ports:
           - 5432:5432
@@ -142,11 +125,9 @@ jobs:
           --health-timeout=5s
           --health-retries=5
 
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -155,10 +136,8 @@ jobs:
           check-latest: true
           cache: true
 
-
       - name: Build server
         run: go build -o server ./cmd/server
-
 
       - name: Start server
         env:
@@ -170,10 +149,8 @@ jobs:
           echo $! > app.pid
           sleep 2
 
-
       - name: Smoke test /healthz
         run: scripts/smoke.sh
-
 
       - name: Stop server & upload logs
         if: always()
@@ -181,14 +158,12 @@ jobs:
           if [ -f app.pid ]; then kill "$(cat app.pid)" || true; fi
           sleep 1
 
-
       - name: Upload app.log
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: app-log
           path: app.log
-
 
   # -------------------------
   # Build & push Docker image (only on push to main)
@@ -201,11 +176,9 @@ jobs:
       contents: read
       packages: write
 
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -213,7 +186,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
@@ -223,7 +195,6 @@ jobs:
           tags: |
             ghcr.io/gitdengas123456/devops-valgfag:latest
 
-
   # -------------------------
   # Deploy to VM via SSH (compose + .env)
   # -------------------------
@@ -232,15 +203,23 @@ jobs:
     runs-on: ubuntu-latest
     environment: produktion
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-
+    permissions:
+      contents: read
 
     steps:
       - name: Checkout code (for reference)
         uses: actions/checkout@v4
 
-
       - name: Deploy to VM via SSH
         uses: appleboy/ssh-action@v1.1.0
+        env:
+          POSTGRES_USER: ${{ vars.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ vars.POSTGRES_DB }}
+          SESSION_KEY: ${{ secrets.SESSION_KEY }}
+          DMI_API_KEY: ${{ secrets.DMI_API_KEY }}
+          GF_SECURITY_ADMIN_USER: ${{ secrets.GF_SECURITY_ADMIN_USER }}
+          GF_SECURITY_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
         with:
           host: ${{ vars.PROD_SSH_HOST }}
           username: ${{ vars.PROD_SSH_USER }}
@@ -249,52 +228,38 @@ jobs:
           script: |
             set -e
 
-
             echo "==> Going to app folder on VM..."
             cd ${{ vars.DEPLOY_PATH }}
-
 
             echo "==> Sync repo to origin/main..."
             git fetch origin main
             git reset --hard origin/main
 
-
-            echo "==> Writing .env from GitHub secrets/vars..."
+            echo "==> Writing .env on VM..."
             umask 077
-            cat > .env <<'EOF'
+            cat > .env <<EOF
             APP_ENV=prod
             PORT=8080
 
+            POSTGRES_USER=$POSTGRES_USER
+            POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+            POSTGRES_DB=$POSTGRES_DB
 
-            POSTGRES_USER=${{ vars.POSTGRES_USER }}
-            POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
-            POSTGRES_DB=${{ vars.POSTGRES_DB }}
+            SESSION_KEY=$SESSION_KEY
+            DMI_API_KEY=$DMI_API_KEY
 
-
-            SESSION_KEY=${{ secrets.SESSION_KEY }}
-            DMI_API_KEY=${{ secrets.DMI_API_KEY }}
-
-
-            GF_SECURITY_ADMIN_USER=${{ secrets.GF_SECURITY_ADMIN_USER }}
-            GF_SECURITY_ADMIN_PASSWORD=${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
+            GF_SECURITY_ADMIN_USER=$GF_SECURITY_ADMIN_USER
+            GF_SECURITY_ADMIN_PASSWORD=$GF_SECURITY_ADMIN_PASSWORD
             EOF
             chmod 600 .env
-
 
             echo "==> Pulling latest image from GHCR..."
             docker compose pull
 
-
             echo "==> Starting/restarting compose stack..."
             docker compose up -d --remove-orphans
-
 
             echo "==> Cleaning up old images..."
             docker image prune -f
 
-
             echo "Deployment finished."
-
-
-
-
