Update .env.example with additional configuration options

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,42 @@
+# =====================
+# App runtime
+# =====================
 APP_ENV=prod
 PORT=8080
 
 
-# PostgreSQL credentials (used by app + DB container)
+# =====================
+# PostgreSQL
+# (used by app + db container)
+# =====================
 POSTGRES_USER=devops
 POSTGRES_PASSWORD=devops
 POSTGRES_DB=whoknows
 
 
-# Session and feature flags
+# =====================
+# Session / feature flags
+# =====================
+# ⚠️ SKAL være en unik, hemmelig streng (min. 32 bytes) i prod
 SESSION_KEY=please-change-me-to-a-unique-32-byte-secret-string----
+
+# Feature toggles
 SEARCH_FTS=0
 EXTERNAL_SEARCH=1
 
 
+# =====================
 # External APIs
+# =====================
+# ⚠️ SKAL sættes i prod
 DMI_API_KEY=replace-with-dmi-api-key
+
 WIKI_USER_AGENT=devops-valgfag/1.0
 
 
-# Grafana admin (for monitoring stack)
+# =====================
+# Grafana / Monitoring
+# =====================
+# Bruges kun ved provisioning / første startup
 GF_SECURITY_ADMIN_USER=admin
 GF_SECURITY_ADMIN_PASSWORD=changeme
