--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,32 @@
 version: "3.9"
 
-
 services:
   whoknows-app:
-    image: ghcr.io/gitdengas123456/devops-valgfag:latest
+    image: ghcr.io/gitdengas123456/devops-valgfag:${APP_IMAGE_TAG:?set APP_IMAGE_TAG in .env (e.g. v1.2.3 or commit SHA)}
     container_name: whoknows-app
     ports:
       - "8080:8080"
     env_file:
       - .env
     environment:
-      # We let .env control most settings (SESSION_KEY, DMI_API_KEY, etc.)
-      # The app constructs its own PostgreSQL DSN from POSTGRES_* (and DB_HOST) via resolvePostgresDSN.
-      PORT: 8080
-      APP_ENV: prod
-      # Set to 0 until Postgres FTS is implemented; set to 1 when tsvector search is ready
-      SEARCH_FTS: 0
-      # Explicitly tell the app which host to use for Postgres (matches the service name below)
+      PORT: "8080"
+      APP_ENV: "prod"
+
+      # Feature flags
+      SEARCH_FTS: "0"
+      EXTERNAL_SEARCH: ${EXTERNAL_SEARCH:-1}
+      WIKI_USER_AGENT: ${WIKI_USER_AGENT:-devops-valgfag/1.0}
+
+      # Postgres host (service name)
       DB_HOST: postgres_db
+
+      # Required secrets/config
       SESSION_KEY: ${SESSION_KEY:?SESSION_KEY is required}
-      DMI_API_KEY: ${DMI_API_KEY}
+      DMI_API_KEY: ${DMI_API_KEY:?DMI_API_KEY is required}
     depends_on:
       postgres_db:
         condition: service_healthy
     restart: unless-stopped
-
 
   postgres_db:
     image: postgres:16
@@ -33,7 +35,7 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-devops}
+      POSTGRES_USER: ${POSTGRES_USER:?set POSTGRES_USER in .env}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?set POSTGRES_PASSWORD in .env}
       POSTGRES_DB: ${POSTGRES_DB:-whoknows}
     healthcheck:
@@ -42,13 +44,12 @@ services:
       timeout: 5s
       retries: 5
     ports:
-      - "127.0.0.1:5432:5432"   # Can be removed in production, but useful for development
+      - "127.0.0.1:5432:5432" # Can be removed in production, but useful for development
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
-
   node_exporter:
-    image: prom/node-exporter:latest
+    image: ${NODE_EXPORTER_IMAGE:?set NODE_EXPORTER_IMAGE in .env (pin a version, avoid :latest)}
     container_name: node_exporter
     ports:
       - "9100:9100"
@@ -64,9 +65,8 @@ services:
     pid: host
     restart: unless-stopped
 
-
   prometheus:
-    image: prom/prometheus:latest
+    image: ${PROMETHEUS_IMAGE:?set PROMETHEUS_IMAGE in .env (pin a version, avoid :latest)}
     container_name: prometheus
     ports:
       - "9090:9090"
@@ -78,17 +78,16 @@ services:
       - node_exporter
     restart: unless-stopped
 
-
   grafana:
-    image: grafana/grafana:latest
+    image: ${GRAFANA_IMAGE:?set GRAFANA_IMAGE in .env (pin a version, avoid :latest)}
     container_name: grafana
     ports:
       - "3000:3000"
     env_file:
       - .env
     environment:
-      GF_SECURITY_ADMIN_USER: ${GF_SECURITY_ADMIN_USER}
-      GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD}
+      GF_SECURITY_ADMIN_USER: ${GF_SECURITY_ADMIN_USER:?set GF_SECURITY_ADMIN_USER in .env}
+      GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD:?set GF_SECURITY_ADMIN_PASSWORD in .env}
     volumes:
       - grafana-storage:/var/lib/grafana
       - ./monitoring/grafana/search-monitoring-dashboard.json:/var/lib/grafana/dashboards/search-monitoring-dashboard.json:ro
@@ -97,11 +96,7 @@ services:
       - prometheus
     restart: unless-stopped
 
-
 volumes:
   prometheus-data:
   grafana-storage:
   postgres-data:
-
-
-
