--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,21 +17,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      POSTGRES_USER: ${{ vars.CI_POSTGRES_USER || 'devops' }}
-      POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD }}
-      POSTGRES_DB: ${{ vars.CI_POSTGRES_DB || 'whoknows' }}
+      POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
+      POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
+      POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
+
     services:
       postgres:
         image: postgres:16
         env:
           # Important: env.* does NOT work here, so we repeat the expressions
-          POSTGRES_USER: ${{ vars.CI_POSTGRES_USER || 'devops' }}
-          POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD }}
-          POSTGRES_DB: ${{ vars.CI_POSTGRES_DB || 'whoknows' }}
+          POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
+          POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
+          POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
         ports:
           - 5432:5432
         options: >-
-          --health-cmd="pg_isready -U ${{ vars.CI_POSTGRES_USER || 'devops' }} -d ${{ vars.CI_POSTGRES_DB || 'whoknows' }}"
+          --health-cmd="pg_isready -U ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }} -d ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
@@ -69,6 +70,7 @@ jobs:
       - name: Run tests (race + coverage)
         env:
           DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}?sslmode=disable
+          TEST_DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}?sslmode=disable
         run: |
           go test -v -race ./... \
             -coverpkg=./cmd/server,./handlers,./internal/db \
@@ -107,20 +109,21 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     env:
-      POSTGRES_USER: ${{ vars.CI_POSTGRES_USER || 'devops' }}
-      POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD }}
-      POSTGRES_DB: ${{ vars.CI_POSTGRES_DB || 'whoknows' }}
+      POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
+      POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
+      POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
+
     services:
       postgres:
         image: postgres:16
         env:
-          POSTGRES_USER: ${{ vars.CI_POSTGRES_USER || 'devops' }}
-          POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD }}
-          POSTGRES_DB: ${{ vars.CI_POSTGRES_DB || 'whoknows' }}
+          POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
+          POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
+          POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
         ports:
           - 5432:5432
         options: >-
-          --health-cmd="pg_isready -U ${{ vars.CI_POSTGRES_USER || 'devops' }} -d ${{ vars.CI_POSTGRES_DB || 'whoknows' }}"
+          --health-cmd="pg_isready -U ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }} -d ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
@@ -216,10 +219,18 @@ jobs:
           POSTGRES_USER: ${{ vars.POSTGRES_USER }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           POSTGRES_DB: ${{ vars.POSTGRES_DB }}
+
           SESSION_KEY: ${{ secrets.SESSION_KEY }}
           DMI_API_KEY: ${{ secrets.DMI_API_KEY }}
+
           GF_SECURITY_ADMIN_USER: ${{ secrets.GF_SECURITY_ADMIN_USER }}
           GF_SECURITY_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
+
+          # If docker-compose.yml uses ${VAR:?} guards, these must exist.
+          APP_IMAGE_TAG: ${{ vars.APP_IMAGE_TAG || 'latest' }}
+          NODE_EXPORTER_IMAGE: ${{ vars.NODE_EXPORTER_IMAGE || 'prom/node-exporter:latest' }}
+          PROMETHEUS_IMAGE: ${{ vars.PROMETHEUS_IMAGE || 'prom/prometheus:latest' }}
+          GRAFANA_IMAGE: ${{ vars.GRAFANA_IMAGE || 'grafana/grafana:latest' }}
         with:
           host: ${{ vars.PROD_SSH_HOST }}
           username: ${{ vars.PROD_SSH_USER }}
@@ -227,6 +238,16 @@ jobs:
           port: ${{ vars.PROD_SSH_PORT }}
           script: |
             set -e
+
+            if [ -z "${POSTGRES_USER}" ] || [ -z "${POSTGRES_DB}" ] || [ -z "${POSTGRES_PASSWORD}" ]; then
+              echo "Missing POSTGRES_USER/POSTGRES_DB (vars) or POSTGRES_PASSWORD (secret) in environment 'produktion'"
+              exit 1
+            fi
+
+            if [ -z "${SESSION_KEY}" ] || [ -z "${DMI_API_KEY}" ]; then
+              echo "Missing SESSION_KEY or DMI_API_KEY in environment 'produktion'"
+              exit 1
+            fi
 
             echo "==> Going to app folder on VM..."
             cd ${{ vars.DEPLOY_PATH }}
@@ -241,15 +262,20 @@ jobs:
             APP_ENV=prod
             PORT=8080
 
-            POSTGRES_USER=$POSTGRES_USER
-            POSTGRES_PASSWORD=$POSTGRES_PASSWORD
-            POSTGRES_DB=$POSTGRES_DB
+            POSTGRES_USER=${POSTGRES_USER}
+            POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+            POSTGRES_DB=${POSTGRES_DB}
 
-            SESSION_KEY=$SESSION_KEY
-            DMI_API_KEY=$DMI_API_KEY
+            SESSION_KEY=${SESSION_KEY}
+            DMI_API_KEY=${DMI_API_KEY}
 
-            GF_SECURITY_ADMIN_USER=$GF_SECURITY_ADMIN_USER
-            GF_SECURITY_ADMIN_PASSWORD=$GF_SECURITY_ADMIN_PASSWORD
+            GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
+            GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+
+            APP_IMAGE_TAG=${APP_IMAGE_TAG}
+            NODE_EXPORTER_IMAGE=${NODE_EXPORTER_IMAGE}
+            PROMETHEUS_IMAGE=${PROMETHEUS_IMAGE}
+            GRAFANA_IMAGE=${GRAFANA_IMAGE}
             EOF
             chmod 600 .env
 
