Revise comments in .env.example for clarity
Updated environment variable descriptions and examples for clarity.

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@
 APP_ENV=prod
 PORT=8080
 
+# Image tag used by docker-compose
+# Example: latest, v1.0.0, commit SHA
+APP_IMAGE_TAG=latest
+
 
 # =====================
 # PostgreSQL
@@ -17,9 +21,10 @@ POSTGRES_DB=whoknows
 # =====================
 # Session / feature flags
 # =====================
-# ⚠️ SKAL være en unik, hemmelig streng (min. 32 bytes) i prod
-# SESSION_KEY should be a unique, random 32-byte base64-encoded string (e.g. generated with `openssl rand -base64 32`)
-SESSION_KEY=3q2+7w==3q2+7w==3q2+7w==3q2+7w==3q2+7w==3q2+7w==
+# ⚠️ MUST be a unique, secret string (min. 32 bytes) in production
+# Generate with:
+#   openssl rand -base64 32
+SESSION_KEY=replace-with-secure-random-string
 
 # Feature toggles
 SEARCH_FTS=0
@@ -29,8 +34,11 @@ EXTERNAL_SEARCH=1
 # =====================
 # External APIs
 # =====================
-# ⚠️ SKAL sættes i prod
+# ⚠️ MUST be set in production
 DMI_API_KEY=replace-with-dmi-api-key
+
+# Optional override (defaults to https://dmigw.govcloud.dk)
+# DMI_API_URL=https://dmigw.govcloud.dk
 
 WIKI_USER_AGENT=devops-valgfag/1.0
 
@@ -38,6 +46,6 @@ WIKI_USER_AGENT=devops-valgfag/1.0
 # =====================
 # Grafana / Monitoring
 # =====================
-# Bruges kun ved provisioning / første startup
+# Used only for initial provisioning
 GF_SECURITY_ADMIN_USER=admin
 GF_SECURITY_ADMIN_PASSWORD=changeme
