--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,18 @@ services:
       # Required secrets/config
       SESSION_KEY: ${SESSION_KEY:?SESSION_KEY is required}
       DMI_API_KEY: ${DMI_API_KEY:?DMI_API_KEY is required}
+
     depends_on:
       postgres_db:
         condition: service_healthy
+
+    healthcheck:
+      test: ["CMD", "curl", "-fsS", "http://localhost:8080/healthz"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+      start_period: 10s
+
     restart: unless-stopped
 
   postgres_db:
