fix: harden handlers, split homepage/search metrics, and address sonar issues

--- a/.dockerignore
+++ b/.dockerignore
@@ -23,7 +23,5 @@ Thumbs.db
 
 # Docker-specific
 # Dockerfile
-
-
-# Database (optional — comment this out if you want to copy it into the image)
-#internal/db/whoknows.db
+.env
+.env.*
