--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,23 +16,25 @@ jobs:
   # -------------------------
   build:
     runs-on: ubuntu-latest
+
+    # CI-DB: hold det simpelt og stabilt (ingen secrets nødvendige her)
     env:
-      POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
-      POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
-      POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
+      POSTGRES_USER: devops
+      POSTGRES_PASSWORD: devops
+      POSTGRES_DB: whoknows
 
     services:
       postgres:
         image: postgres:16
         env:
-          # Important: env.* does NOT work here, so we repeat the expressions
-          POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
-          POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
-          POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
+          POSTGRES_USER: devops
+          POSTGRES_PASSWORD: devops
+          POSTGRES_DB: whoknows
         ports:
           - 5432:5432
+        # VIGTIGT: her må vi ikke bruge secrets/expressions med secrets i options
         options: >-
-          --health-cmd="pg_isready -U ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }} -d ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}"
+          --health-cmd="pg_isready -U devops -d whoknows"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
@@ -64,7 +66,8 @@ jobs:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
-          version: v1.60.3
+          # v8 bruger golangci-lint v2.x (pin evt. for stabilitet)
+          version: v2.7.2
           args: ./...
 
       - name: Run tests (race + coverage)
@@ -108,22 +111,23 @@ jobs:
   healthz:
     runs-on: ubuntu-latest
     needs: build
+
     env:
-      POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
-      POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
-      POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
+      POSTGRES_USER: devops
+      POSTGRES_PASSWORD: devops
+      POSTGRES_DB: whoknows
 
     services:
       postgres:
         image: postgres:16
         env:
-          POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
-          POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
-          POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
+          POSTGRES_USER: devops
+          POSTGRES_PASSWORD: devops
+          POSTGRES_DB: whoknows
         ports:
           - 5432:5432
         options: >-
-          --health-cmd="pg_isready -U ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }} -d ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}"
+          --health-cmd="pg_isready -U devops -d whoknows"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
@@ -150,14 +154,30 @@ jobs:
         run: |
           nohup ./server > app.log 2>&1 &
           echo $! > app.pid
-          sleep 2
+
+      # Vent på readiness før scripts/smoke.sh (så /readyz ikke flaker)
+      - name: Wait for /readyz
+        run: |
+          set -e
+          for i in $(seq 1 30); do
+            if curl -fsS --max-time 2 "http://127.0.0.1:8080/readyz" >/dev/null; then
+              echo "readyz OK"
+              exit 0
+            fi
+            echo "waiting for readyz... ($i/30)"
+            sleep 1
+          done
+          echo "readyz did not become ready in time"
+          echo "---- app.log ----"
+          tail -n 200 app.log || true
+          exit 1
 
       - name: Smoke test /healthz, /readyz, /metrics
         env:
           BASE_URL: http://127.0.0.1:8080
         run: scripts/smoke.sh
 
-      - name: Stop server & upload logs
+      - name: Stop server
         if: always()
         run: |
           if [ -f app.pid ]; then kill "$(cat app.pid)" || true; fi
@@ -198,7 +218,8 @@ jobs:
           context: .
           push: true
           tags: |
-            ghcr.io/gitdengas123456/devops-valgfag:latest
+            ghcr.io/${{ github.repository_owner }}/devops-valgfag:latest
+            ghcr.io/${{ github.repository_owner }}/devops-valgfag:${{ github.sha }}
 
   # -------------------------
   # Deploy to VM via SSH (compose + .env)
@@ -228,11 +249,11 @@ jobs:
           GF_SECURITY_ADMIN_USER: ${{ secrets.GF_SECURITY_ADMIN_USER }}
           GF_SECURITY_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
 
-          # If docker-compose.yml uses ${VAR:?} guards, these must exist.
           APP_IMAGE_TAG: ${{ vars.APP_IMAGE_TAG || 'latest' }}
           NODE_EXPORTER_IMAGE: ${{ vars.NODE_EXPORTER_IMAGE || 'prom/node-exporter:latest' }}
           PROMETHEUS_IMAGE: ${{ vars.PROMETHEUS_IMAGE || 'prom/prometheus:latest' }}
           GRAFANA_IMAGE: ${{ vars.GRAFANA_IMAGE || 'grafana/grafana:latest' }}
+
         with:
           host: ${{ vars.PROD_SSH_HOST }}
           username: ${{ vars.PROD_SSH_USER }}
@@ -252,7 +273,7 @@ jobs:
             fi
 
             echo "==> Going to app folder on VM..."
-            cd ${{ vars.DEPLOY_PATH }}
+            cd "${{ vars.DEPLOY_PATH }}"
 
             echo "==> Sync repo to origin/main..."
             git fetch origin main
@@ -260,25 +281,20 @@ jobs:
 
             echo "==> Writing .env on VM..."
             umask 077
-            cat > .env <<EOF
-            APP_ENV=prod
-            PORT=8080
-
-            POSTGRES_USER=${POSTGRES_USER}
-            POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-            POSTGRES_DB=${POSTGRES_DB}
-
-            SESSION_KEY=${SESSION_KEY}
-            DMI_API_KEY=${DMI_API_KEY}
-
-            GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
-            GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
-
-            APP_IMAGE_TAG=${APP_IMAGE_TAG}
-            NODE_EXPORTER_IMAGE=${NODE_EXPORTER_IMAGE}
-            PROMETHEUS_IMAGE=${PROMETHEUS_IMAGE}
-            GRAFANA_IMAGE=${GRAFANA_IMAGE}
-            EOF
+            : > .env
+            printf '%s=%s\n' "APP_ENV" "prod" >> .env
+            printf '%s=%s\n' "PORT" "8080" >> .env
+            printf '%s=%s\n' "POSTGRES_USER" "${POSTGRES_USER}" >> .env
+            printf '%s=%s\n' "POSTGRES_PASSWORD" "${POSTGRES_PASSWORD}" >> .env
+            printf '%s=%s\n' "POSTGRES_DB" "${POSTGRES_DB}" >> .env
+            printf '%s=%s\n' "SESSION_KEY" "${SESSION_KEY}" >> .env
+            printf '%s=%s\n' "DMI_API_KEY" "${DMI_API_KEY}" >> .env
+            printf '%s=%s\n' "GF_SECURITY_ADMIN_USER" "${GF_SECURITY_ADMIN_USER}" >> .env
+            printf '%s=%s\n' "GF_SECURITY_ADMIN_PASSWORD" "${GF_SECURITY_ADMIN_PASSWORD}" >> .env
+            printf '%s=%s\n' "APP_IMAGE_TAG" "${APP_IMAGE_TAG}" >> .env
+            printf '%s=%s\n' "NODE_EXPORTER_IMAGE" "${NODE_EXPORTER_IMAGE}" >> .env
+            printf '%s=%s\n' "PROMETHEUS_IMAGE" "${PROMETHEUS_IMAGE}" >> .env
+            printf '%s=%s\n' "GRAFANA_IMAGE" "${GRAFANA_IMAGE}" >> .env
             chmod 600 .env
 
             echo "==> Pulling latest image from GHCR..."
