--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
         condition: service_healthy
 
     healthcheck:
-      test: ["CMD", "curl", "-fsS", "http://localhost:8080/healthz"]
+      test: ["CMD-SHELL", "curl -fsS http://localhost:8080/readyz | grep -qx 'ready'"]
       interval: 10s
       timeout: 3s
       retries: 5
@@ -58,8 +58,19 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
+  postgres_exporter:
+    image: quay.io/prometheuscommunity/postgres-exporter:v0.15.0
+    container_name: postgres_exporter
+    env_file:
+      - .env
+    environment:
+      DATA_SOURCE_NAME: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres_db:5432/${POSTGRES_DB}?sslmode=disable
+    depends_on:
+      - postgres_db
+    restart: unless-stopped
+
   node_exporter:
-    image: ${NODE_EXPORTER_IMAGE:?set NODE_EXPORTER_IMAGE in .env (pin a version, avoid :latest)}
+    image: ${NODE_EXPORTER_IMAGE:-prom/node-exporter:v1.8.2} # pin a version, avoid :latest
     container_name: node_exporter
     ports:
       - "9100:9100"
@@ -76,7 +87,7 @@ services:
     restart: unless-stopped
 
   prometheus:
-    image: ${PROMETHEUS_IMAGE:?set PROMETHEUS_IMAGE in .env (pin a version, avoid :latest)}
+    image: ${PROMETHEUS_IMAGE:-prom/prometheus:v2.54.1} # pin a version, avoid :latest
     container_name: prometheus
     ports:
       - "9090:9090"
@@ -89,7 +100,7 @@ services:
     restart: unless-stopped
 
   grafana:
-    image: ${GRAFANA_IMAGE:?set GRAFANA_IMAGE in .env (pin a version, avoid :latest)}
+    image: ${GRAFANA_IMAGE:-grafana/grafana:12.3.0} # pin a version, avoid :latest
     container_name: grafana
     ports:
       - "3000:3000"
@@ -101,6 +112,7 @@ services:
     volumes:
       - grafana-storage:/var/lib/grafana
       - ./monitoring/grafana/search-monitoring-dashboard.json:/var/lib/grafana/dashboards/search-monitoring-dashboard.json:ro
+      - ./monitoring/grafana/postgres-dashboard.json:/var/lib/grafana/dashboards/postgres-dashboard.json:ro
       - ./monitoring/grafana/provisioning:/etc/grafana/provisioning:ro
     depends_on:
       - prometheus
