--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,11 +62,13 @@ jobs:
       - name: Run go vet
         run: go vet ./...
 
+      - name: Install golangci-lint (built with this Go)
+        run: |
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.60.3
+
       - name: Run golangci-lint
-        uses: golangci/golangci-lint-action@v5
-        with:
-          version: v1.60.3
-          args: ./...
+        run: golangci-lint run ./...
 
       - name: Run tests (race + coverage)
         env:
