Replace golangci-lint installation with action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,17 +62,12 @@ jobs:
       - name: Run go vet
         run: go vet ./...
 
-      - name: Install golangci-lint (built with this Go)
-        run: |
-          set -euxo pipefail
-          echo "$(go env GOPATH)/bin" >> "$GITHUB_PATH"
-          go install github.com/golangci/golangci-lint/cmd/golangci-lint@v1.60.3
-          golangci-lint --version
-
       - name: Run golangci-lint
-        run: |
-          set -euxo pipefail
-          golangci-lint run --timeout=5m --out-format=colored-line-number ./...
+        uses: golangci/golangci-lint-action@v8
+        with:
+          version: v2.7.2
+          args: --timeout=5m ./...
+
       - name: Run tests (race + coverage)
         env:
           DATABASE_URL: postgres://${{ env.POSTGRES_USER }}:${{ env.POSTGRES_PASSWORD }}@localhost:5432/${{ env.POSTGRES_DB }}?sslmode=disable
