--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: "3.9"
-
 services:
   whoknows-app:
+    build: .
     image: ghcr.io/gitdengas123456/devops-valgfag:${APP_IMAGE_TAG:?set APP_IMAGE_TAG in .env (e.g. latest, v1.2.3 or commit SHA)}
     container_name: whoknows-app
     ports:
@@ -89,6 +88,11 @@ services:
   prometheus:
     image: ${PROMETHEUS_IMAGE:-prom/prometheus:v2.54.1} # pin a version, avoid :latest
     container_name: prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.external-url=/prometheus"
+      - "--web.route-prefix=/prometheus"
     ports:
       - "9090:9090"
     volumes:
@@ -109,6 +113,9 @@ services:
     environment:
       GF_SECURITY_ADMIN_USER: ${GF_SECURITY_ADMIN_USER:?set GF_SECURITY_ADMIN_USER in .env}
       GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD:?set GF_SECURITY_ADMIN_PASSWORD in .env}
+      GF_SERVER_ROOT_URL: "%(protocol)s://%(domain)s/grafana/"
+      GF_SERVER_SERVE_FROM_SUB_PATH: "true"
+      GF_SERVER_DOMAIN: ${GF_SERVER_DOMAIN:-gitdengas.dk}
     volumes:
       - grafana-storage:/var/lib/grafana
       - ./monitoring/grafana/search-monitoring-dashboard.json:/var/lib/grafana/dashboards/search-monitoring-dashboard.json:ro
