--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -15,9 +15,16 @@ scrape_configs:
       - targets:
           - "node_exporter:9100"
 
+  # Postgres exporter
+  - job_name: "postgres_exporter"
+    static_configs:
+      - targets:
+          - "postgres_exporter:9187"
+        labels:
+          instance: "postgres_db"
+
   # Prometheus self-scrape
   - job_name: "prometheus"
     static_configs:
       - targets:
           - "localhost:9090"
-
